tests/miniJava/neg/004368_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public Main int [] java ( ) { return 0 ; } }
